--- a/_layouts/compress.html
+++ b/_layouts/compress.html
@@ -1,8 +1,8 @@
 ---
-# Jekyll layout that compresses HTML
+# # layout that compresses HTML
 # v3.0.1
-# http://jch.penibelst.de/
-# © 2014–2015 Anatol Broder
+# #
+# #
 # MIT License
 ---
 
