--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -86,8 +86,8 @@
     {% endif %}
 
     {% if sidebar.goodreads %}
-    <li class="goodreads-g"><i class="fab fa-goodreads-g"></i>
-      <a href="https://www.goodreads.com/user/show/{{ sidebar.goodreads }}" target="_blank">{{ sidebar.goodreads }}</a>
+    <li class="goodreads-g"><i class="fa fa-calendar"></i>
+      <a href="https://calendly.com/{{ sidebar.goodreads }}" target="_blank">{{ sidebar.goodreads }}</a>
     </li>
     {% endif %}
 
